--- a/pom.xml
+++ b/pom.xml
@@ -51,23 +51,14 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Spring Boot Starter Web (if not added already) -->
+
+		<!-- http://localhost:8081/swagger-ui/index.html -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 
-		<!-- Swagger dependencies -->
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>3.0.0</version> <!-- Use the latest version available -->
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>3.0.0</version> <!-- Use the latest version available -->
-		</dependency>
 	</dependencies>
 
 	<build>
