--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=8081
+spring.flyway.baseline-on-migrate=true
